# ChangeLog for gnome-base/libbonobo
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonobo/ChangeLog,v 1.81 2005/07/14 09:54:56 leonardop Exp $

*libbonobo-2.10.0 (14 Jul 2005)

  14 Jul 2005; Leonardo Boshell <leonardop@gentoo.org> libbonobo-2.10.0.ebuild:
  New version. Added 'static' USE flag.

  12 Jul 2005; Stephen P. Becker <geoman@gentoo.org> libbonobo-2.8.1.ebuild:
  stable on mips

  13 Jun 2005; Markus Rothe <corsair@gentoo.org> libbonobo-2.8.1.ebuild:
  Stable on ppc64

  11 May 2005; Guy Martin <gmsoft@gentoo.org> libbonobo-2.8.1.ebuild:
  Stable on hppa.

  10 May 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  libbonobo-2.8.1.ebuild:
  Stable on sparc

  08 May 2005; Herbie Hopkins <herbs@gentoo.org> libbonobo-2.8.1.ebuild:
  Stable on amd64.

  27 Apr 2005; Bryan Østergaard <kloeri@gentoo.org> libbonobo-2.8.1.ebuild:
  Stable on alpha + ia64.

  25 Apr 2005; Mike Gardiner <obz@gentoo.org> libbonobo-2.8.1.ebuild:
  Keyworded ppc x86

  02 Apr 2005; Stephen P. Becker <geoman@gentoo.org> libbonobo-2.8.0.ebuild:
  stable on mips

*libbonobo-2.8.1 (16 Feb 2005)

  16 Feb 2005; Mike Gardiner <obz@gentoo.org> +libbonobo-2.8.1.ebuild:
  New version

  08 Jan 2005; Tom Martin <slarti@gentoo.org> libbonobo-2.8.0.ebuild:
  Stable on amd64.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  23 Dec 2004; Guy Martin <gmsoft@gentoo.org> libbonobo-2.8.0.ebuild:
  Stable on hppa.

  11 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> libbonobo-2.8.0.ebuild:
  Stable on alpha.

  16 Nov 2004; Michele Noberasco <s4t4n@gentoo.org> libbonobo-2.8.0.ebuild:
  Depend on >=gnome-base/orbit version 2.12.0 rather than 2.9.2, otherwise
  it won't compile with gcc >= 3.4.2. And yes, orbit-2.12.0 is marked stable
  for all arches libbonobo is, too ;-)

  11 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org> libbonobo-2.8.0.ebuild:
  Stable on sparc
