@@ -1,6 +1,8 @@
 MD5 ba9160d4c59a78a63a05c58cd6562c21 ChangeLog 8808
 MD5 68a0019e9d7717d03ca7b3181528a928 libbonobo-2.10.0.ebuild 821
+MD5 12cd55987c1094f3bacbd133e15a0abf libbonobo-2.10.1.ebuild 828
 MD5 e339ed6c826b56d0194203cd6be6dda8 libbonobo-2.8.1.ebuild 727
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 MD5 275ee576e1bf6385f018024a23e18b87 files/digest-libbonobo-2.10.0 70
+MD5 3ad462f33613644f13f10e0cfebb321a files/digest-libbonobo-2.10.1 70
 MD5 7a23ad7bd11927f25af8ae42f705e470 files/digest-libbonobo-2.8.1 69
