@@ -1,0 +1,1 @@
+MD5 927d572970d87121c8375aab1b4b1d37 libbonobo-2.10.1.tar.bz2 1358327
